tests/examples/parent_use.af
# Test importing of other files
use "subdir/child_use2.af",
from_child1 = ``,
use "child_use1.af",
from_child2 = ``

